--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fortune-app-client",
+  "name": "petbnb-client",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,10 +7,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.19",
+    "@tanstack/react-query": "^5.8.4",
+    "date-fns": "^2.30.0",
+    "maplibre-gl": "^3.3.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-day-picker": "^8.9.1",
+    "react-dom": "19.1.0",
+    "react-router-dom": "^6.20.0",
+    "react-window": "^1.8.10",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^4.0.0",
     "typescript": "5.8.3",
     "vite": "^5.0.0"
