--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "fortune-app-server",
+  "name": "petbnb-server",
   "version": "1.0.0",
   "scripts": {
     "dev": "prisma migrate deploy && prisma db seed && ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "migrate": "prisma migrate deploy && knex migrate:latest --knexfile ./knexfile.js",
+    "migrate": "prisma migrate deploy",
     "seed": "prisma db seed"
   },
   "prisma": {
@@ -12,14 +12,19 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "axios": "^1.5.0",
     "cors": "2.8.5",
     "dotenv": "^16.5.0",
     "express": "5.1.0",
     "knex": "^3.1.0",
     "pg": "^8.15.6",
-    "prisma": "^6.7.0"
+    "pino": "^8.15.1",
+    "pino-pretty": "^10.2.0",
+    "prisma": "^6.7.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.7.1",
