--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,33 @@
 services:
   db:
-    image: postgres:16-alpine
+    image: postgis/postgis:16-3.4-alpine
+    platform: linux/amd64
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: ai_app
-    ports: ["5433:5432"]
-    volumes: ["pgdata:/var/lib/postgresql/data"]
+      POSTGRES_DB: petbnb
+    ports: ["5432:5432"]
+    volumes: 
+      - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     
   api:
     build: ./server
     environment:
-      DATABASE_URL: postgres://postgres:postgres@db:5432/ai_app
+      DATABASE_URL: postgres://postgres:postgres@db:5432/petbnb
       PORT: 4000
-    depends_on: [db]
-    ports: ["4001:4000"]
+    depends_on:
+      db:
+        condition: service_healthy
+    ports: ["4000:4000"]
+    volumes:
+      - ./server:/app
+      - /app/node_modules
+    command: npm run dev
+
 volumes:
   pgdata: {}
