--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,11 @@
     "dev": "prisma migrate deploy && prisma db seed && ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "migrate": "prisma migrate deploy",
-    "seed": "prisma db seed"
+    "seed": "prisma db seed",
+    "start": "node dist/index.js"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "npx ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
